# my-first-clean-project

./: .gitignore  S.py  enumarators.py  homework1.list & dict.py  homework2.maximum.py  homework3.sort.py  horder_function.py  incertion_sort.py  insertion_sotr_test.py  iterator & generator.py  menu.py  oop.homework.py  oop.homework2.py  oop.py  oop2.py  oop_homework2.py  oop_library.py  pyproject.toml  python_db.py  test_html_css_java.html
